--- a/style.css
+++ b/style.css
@@ -14,11 +14,16 @@ body {
 }
 
 .atmo_title{
+	margin: 0 auto;
+	text-align:center;
+	padding: 3em 0 0 0;
 
 }
 
 .atmo_info{
-	
+	margin: 0 auto;
+	text-align:center;
+	padding: 3em 0 0 0;
 }
 
 iframe {width: 100%;
