--- a/style.css
+++ b/style.css
@@ -17,13 +17,16 @@ body {
 	margin: 0 auto;
 	text-align:center;
 	padding: 3em 0 0 0;
-
+	color: #000;
+	font-size: 24;
 }
 
 .atmo_info{
 	margin: 0 auto;
 	text-align:center;
 	padding: 3em 0 0 0;
+	color: #000;
+	font-size: 24px;
 }
 
 iframe {width: 100%;
