--- a/style.css
+++ b/style.css
@@ -17,15 +17,15 @@ body {
 	margin: 0 auto;
 	text-align:center;
 	padding: 3em 0 0 0;
-	color: #000;
-	font-size: 24;
+	color: #fff;
+	font-size: 36px;
 }
 
 .atmo_info{
 	margin: 0 auto;
 	text-align:center;
 	padding: 3em 0 0 0;
-	color: #000;
+	color: #fff;
 	font-size: 24px;
 }
 
