--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color:#000000;
+	background-image: 'background.jpg';
 	margin: 0 auto;
 	max-width: 600px;
 	text-align: center;
