--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-	background-image: 'background.jpg';
+	background-image: "background.jpeg";
+	background-repeat: no-repeat;
+  	background-position: center center;
 	margin: 0 auto;
 	max-width: 600px;
 	text-align: center;
