--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url(background.jpeg);
+	background-image: url('background.jpeg');
 	background-repeat: no-repeat;
   	background-position: center center;
 	margin: 0 auto;
