--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
 	background-image: url('background.jpg');
 	background-repeat: no-repeat;
   	background-position: center center;
+  	background-size: 100%;
 	margin: 0 auto;
 	max-width: 600px;
 	text-align: center;
