--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
 	background-image: url('background.jpg');
 	background-repeat: no-repeat;
   	background-position: center center;
-  	background-size: 100% 100%;
+  	background-size: 100%;
+  	background-color: #000;
 	margin: 0 auto;
 	max-width: 600px;
 	text-align: center;
