--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ iframe {width: 100%;
 
 
 button{
-	background-color: #000;
-	border: 2px solid #fff;
+	background-color: none;
+	border: 3px solid #fff;
 	color: #fff;
 	padding: 1em;
 	height: 40px;
-	width: 250px;
+	width: 150px;
 	line-height: 10px;
 	margin: 0;
 	font-family:'Vollkorn';
