--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body {
 	font-size: 30px;
 }
 
-iframe {width: 100%;
+iframe {
+	width: 100%;
 }
 
 
@@ -44,14 +45,15 @@ button{
 	padding: 1em;
 	height: 40px;
 	width: 150px;
-	line-height: 10px;
+	line-height: 7px;
 	margin: 10px;
 	font-family:'Vollkorn';
 }
 
-button{background-color: #000;
-border: 1px solid #fff;
-color: #fff;
+button{
+	border: 1px solid #fff;
+	color: #fff;
+	font-size: 16px;
 }
 
 
