--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ iframe {
 
 
 button{
-
+	background: transparent;
 	border: 3px solid #fff;
 	color: #fff;
 	padding: 1em;
@@ -48,13 +48,9 @@ button{
 	line-height: 7px;
 	margin: 10px;
 	font-family:'Vollkorn';
-}
-
-button{
-	border: 1px solid #fff;
-	color: #fff;
 	font-size: 16px;
 }
+
 
 
 .link {
