--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 	width:600px;
 	margin: 3em 0 3em 0em;
 	text-align:center;
+	width: 2px;
 }
 
 .atmo_title{
@@ -40,7 +41,7 @@ iframe {
 
 button{
 	background: transparent;
-	border: 3px solid #fff;
+	border: 2px solid #fff;
 	color: #fff;
 	padding: 1em;
 	height: 40px;
