--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 .atmo_info{
 	margin: 0 auto;
 	text-align:center;
-	padding: 2em 0 0 0;
+	padding: 1em 0 2em 0;
 	color: #fff;
 	font-size: 30px;
 }
