--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 
 .atmo_info{
 	margin: 0 auto;
-	text-align:left;
+	text-align:center;
 	padding: 1em 0 2em 0;
 	color: #fff;
 	font-size: 20px;
