--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 .atmo_title{
 	margin: 0 auto;
 	text-align:center;
-	padding: 0.5em 0 0 0;
+	padding: 0.5em 1em 0 1em;
 	color: #fff;
 	font-size: 100px;
 }
