--- a/style.css
+++ b/style.css
@@ -12,43 +12,42 @@ body {
 	max-width: 600px;
 	text-align: center;
 	font-family:"Times";
+	color: #fff;
 }
 
 .lang{
 	font-size: 16px;
-	text-align:center;
-	color: #fff;
 	margin-top: 1em;
 }
 
 .line {
 	width:600px;
 	margin: 1em 0 3em 0em;
-	text-align:center;
 	border: 1px solid #fff;
 }
 
 .atmo_title{
 	margin: 0 auto;
-	text-align:center;
 	padding: 0.5em 0 0 0;
-	color: #fff;
 	font-size: 100px;
 }
 
 .atmo_title2{
 	margin: 0 auto;
-	text-align:center;
 	padding: 0.5em 0 1em 0;
-	color: #fff;
 	font-size: 30px;
 }
 
 .atmo_info{
 	margin: 0 auto;
-	text-align:center;
 	padding: 1em 1em 1em 1em;
-	color: #fff;
+	font-size: 18px;
+	text-shadow: 1px 1px #000;
+}
+
+.artist{
+	margin: 0 auto;
+	padding: 1em 1em 1em 1em;
 	font-size: 18px;
 	text-shadow: 1px 1px #000;
 }
