--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ body {
 
 .line2 {
 	width: 150px;
-	margin: 1em 0 3em 0em;
-	border: .5px solid #fff;
+	size:1px;
+	border: 1px solid #fff;
 	text-align: center;
 }
 
