--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 	padding: 0em 2em 1em 2em;
 	font-size: 14px;
 	text-shadow: 1px 1px #000;
-	text-align: left;
+
 }
 
 .line2 {
@@ -62,6 +62,7 @@ body {
 
 .imm-art{
 	text-align: center;
+	margin: 5px;
 }
 
 h1{
