--- a/style2.css
+++ b/style2.css
@@ -97,6 +97,19 @@ button{
 	font-size: 16px;
 }
 
+input{
+	background: transparent;
+	border: 2px solid #fff;
+	color: #fff;
+	padding: 1em;
+	height: 40px;
+	width: 150px;
+	line-height: 4px;
+	margin: 10px;
+	font-family:'Times';
+	font-size: 16px;
+}
+
 
 
 .link1 {
@@ -125,6 +138,10 @@ margin-top: 150px;
 button:hover {background-color: #fff; color: #000;}
 button:focus {outline: none;}
 button{cursor: pointer;}
+
+input:hover {background-color: #fff; color: #000;}
+input:focus {outline: none;}
+input{cursor: pointer;}
 
 a:link {color:#ffffff;}      /* unvisited link */
 a:visited {color:#ffffff;}  /* visited link */
