--- a/style.css
+++ b/style.css
@@ -106,10 +106,44 @@ margin: 0 auto;
 }
 
 
+input{
+	background: transparent;
+	border: 2px solid #fff;
+	color: #fff;
+	padding: 1em;
+	height: 40px;
+	width: 150px;
+	line-height: 4px;
+	margin: 10px;
+	font-family:'Times';
+	font-size: 16px;
+}
+
+
+
+.form {
+	background: transparent;
+	border: 2px solid #fff;
+	color: #fff;
+	padding: 1em;
+	height: 40px;
+	width: 150px;
+	line-height: 4px;
+	margin: 10px;
+	font-family:'Times';
+	font-size: 16px;
+
+}
+
+
 
 button:hover {background-color: #fff; color: #000;}
 button:focus {outline: none;}
 button{cursor: pointer;}
+
+input:hover {background-color: #fff; color: #000;}
+input:focus {outline: none;}
+input{cursor: text;}
 
 a:link {color:#ffffff;}      /* unvisited link */
 a:visited {color:#ffffff;}  /* visited link */
